--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <p>Notebook list</p>
 
-<p>* <a href="notebook/sampling/">Sqmpling</a></p>
+<p>* <a href="notebook/sampling/">Sampling</a></p>
+<p>* <a href="notebook/dna_extraction/">DNA extraction</a></p>
+<p>* <a href="notebook/f3/">f3</a></p>
+<p>* <a href="notebook/fastp/">fastp</a></p>
+<p>* <a href="notebook/lfh/">LFH</a></p>
+<p>* <a href="notebook/pca/">PCA</a></p>
+<p>* <a href="notebook/reference_genome/">Reference genome</a></p>
+<p>* <a href="notebook/variant_calling/">Variant calling</a></p>
