--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>Notebook list</p>
 
-<p>* <a href="notebook/sampling/">Sampling</a></p>
+<p>* <a href="notebook/sampling/index.nb.html">Sampling</a></p>
 <p>* <a href="notebook/dna_extraction/">DNA extraction</a></p>
 <p>* <a href="notebook/f3/">f3</a></p>
 <p>* <a href="notebook/fastp/">fastp</a></p>
