add index.nb.html for all files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <p>Notebook list</p>
 
 <p>* <a href="notebook/sampling/index.nb.html">Sampling</a></p>
-<p>* <a href="notebook/dna_extraction/">DNA extraction</a></p>
-<p>* <a href="notebook/f3/">f3</a></p>
-<p>* <a href="notebook/fastp/">fastp</a></p>
-<p>* <a href="notebook/lfh/">LFH</a></p>
-<p>* <a href="notebook/pca/">PCA</a></p>
-<p>* <a href="notebook/reference_genome/">Reference genome</a></p>
-<p>* <a href="notebook/variant_calling/">Variant calling</a></p>
+<p>* <a href="notebook/dna_extraction/index.nb.html">DNA extraction</a></p>
+<p>* <a href="notebook/f3/index.nb.html">f3</a></p>
+<p>* <a href="notebook/fastp/index.nb.html">fastp</a></p>
+<p>* <a href="notebook/lfh/index.nb.html">LFH</a></p>
+<p>* <a href="notebook/pca/index.nb.html">PCA</a></p>
+<p>* <a href="notebook/reference_genome/index.nb.html">Reference genome</a></p>
+<p>* <a href="notebook/variant_calling/index.nb.html">Variant calling</a></p>
