--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
-<p>Notebook list</p>
+<header><h1><p><u>Notebook list</u></p></h1></header>
 
-<p>* <a href="notebook/sampling/index.nb.html">Sampling</a></p>
-<p>* <a href="notebook/dna_extraction/index.nb.html">DNA extraction</a></p>
-<p>* <a href="notebook/f3/index.nb.html">f3</a></p>
-<p>* <a href="notebook/fastp/index.nb.html">fastp</a></p>
-<p>* <a href="notebook/lfh/index.nb.html">LFH</a></p>
-<p>* <a href="notebook/pca/index.nb.html">PCA</a></p>
-<p>* <a href="notebook/reference_genome/index.nb.html">Reference genome</a></p>
-<p>* <a href="notebook/variant_calling/index.nb.html">Variant calling</a></p>
+Click on the link below to access to specific notebooks
+
+<p>* <a href="notebook/sampling/index.nb.html">1. Sampling</a></p>
+<p style="margin-left: 40px">Map and sampling details</p>
+
+<p>* <a href="notebook/lfh/index.nb.html">2. LFH</a></p>
+<p style="margin-left: 40px">Description of species life-history traits</p>
+
+<p>* <a href="notebook/dna_extraction/index.nb.html">3. DNA extraction</a></p>
+<p style="margin-left: 40px">Characteristics on individual DNA extraction used for further sequencing</p>
+
+<p>* <a href="notebook/fastp/index.nb.html">4. fastp</a></p>
+<p style="margin-left: 40px">Trim adaptor, raw read filtering and estimate of wholge-genome sequencing raw reads</p>
+
+<p>* <a href="notebook/reference_genome/index.nb.html">5. Reference genome</a></p>
+<p style="margin-left: 40px">Description of assembly of de novo reference genome</p>
+
+<p>* <a href="notebook/variant_calling/index.nb.html">6. Variant calling</a></p>
+<p style="margin-left: 40px">Characteristics of variant calling</p>
+
+<p>* <a href="notebook/pca/index.nb.html">7. PCA</a></p>
+<p style="margin-left: 40px">Principal Component Analysis of each species based on single-nucleotide polymorphism</p>
+
+<p>* <a href="notebook/f3/index.nb.html">8. f3</a></p>
+<p style="margin-left: 40px">f3 inference of introgression</p>
+
+
+
+
+
