--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@ Click on the link below to access to specific notebooks
 <p>* <a href="notebook/reference_genome/index.nb.html">5. Reference genome</a></p>
 <p style="margin-left: 40px">Description of assembly of de novo reference genome</p>
 
-<p>* <a href="notebook/variant_calling/index.nb.html">6. Variant calling</a></p>
+<p>* <a href="notebook/mapping/index.nb.html">7. Mapping</a></p>
+<p style="margin-left: 40px">Characteristics of reference mapping</p>
+
+<p>* <a href="notebook/variant_calling/index.nb.html">8. Variant calling</a></p>
 <p style="margin-left: 40px">Characteristics of variant calling</p>
 
-<p>* <a href="notebook/pca/index.nb.html">7. PCA</a></p>
+<p>* <a href="notebook/pca/index.nb.html">9. PCA</a></p>
 <p style="margin-left: 40px">Principal Component Analysis of each species based on single-nucleotide polymorphism</p>
 
-<p>* <a href="notebook/f3/index.nb.html">8. f3</a></p>
+<p>* <a href="notebook/f3/index.nb.html">10. f3</a></p>
 <p style="margin-left: 40px">f3 inference of introgression</p>
 
 
